@@ -580,7 +580,7 @@ void CGUIWindowVideoPlaylist::ShufflePlayList()
 void CGUIWindowVideoPlaylist::SavePlayList()
 {
   CStdString strNewFileName;
-  if (CGUIDialogKeyboard::ShowAndGetInput(strNewFileName, false))
+  if (CGUIDialogKeyboard::ShowAndGetInput(strNewFileName, (CStdStringW)g_localizeStrings.Get(16012), false))
   {
     // need 2 rename it
     CStdString strPath = g_stSettings.m_szAlbumDirectory;
